image alignment issue solved for small screens like iphone 14 pro max

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -40,6 +40,7 @@ header {
 
 .me {
   width: 22rem;
+  max-width: 90%;
   height: 28rem;
   margin: 4rem auto 0 auto;
   border-radius: 2rem;
@@ -49,14 +50,12 @@ header {
     135deg,
     rgba(77, 181, 255, 0.4),
     rgba(77, 181, 255, 0.1)
-  ); /* subtle modern gradient */
+  );
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15); /* soft shadow */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
-
-/*  */
 
 /* ============== Scrolling down =============== */
 
